--- a/index.html
+++ b/index.html
@@ -18,27 +18,25 @@
   </head>
   <body>
     <header>
-      <div class="header-column">
+      <div class="header-left">
         <div class="header-icon"><img src="ASSETS/menu.svg" alt="" /></div>
       </div>
-      <div class="header-title">
-        <div class="header-icon"><img src="ASSETS/wordle.svg" alt="" /></div>
+
+      <div class="header-center">
+        <div>Wordle</div>
       </div>
-      <div class="header-column">
+
+      <div class="header-right">
         <div class="header-icon"><img src="ASSETS/question.svg" alt="" /></div>
-      </div>
-      <div class="header-column">
         <div class="header-icon">
           <img src="ASSETS/leaderboard.svg" alt="" />
         </div>
-      </div>
-      <div class="header-column">
         <div class="header-icon"><img src="ASSETS/settings.svg" alt="" /></div>
       </div>
     </header>
 
     <main>
-      <div id="timer">time: 00:00</div>
+      <div id="timer">00:00</div>
       <div class="board-row row-0">
         <div class="board-column" data-index="00"></div>
         <div class="board-column" data-index="01"></div>
@@ -121,5 +119,6 @@
         </div>
       </div>
     </footer>
+    <script src="JS/index.js"></script>
   </body>
 </html>
